RESOLVED FIXED234870
[Win][DumpRenderTree] dumpHistoryItem leaks a SafeArray
https://bugs.webkit.org/show_bug.cgi?id=234870
Summary [Win][DumpRenderTree] dumpHistoryItem leaks a SafeArray
Fujii Hironori
Reported 2022-01-04 22:38:14 PST
[Win][DumpRenderTree] dumpHistoryItem leaks a SafeArray r23462 added the following code. > if (arrPtr && SUCCEEDED(::SafeArrayUnlock(arrPtr))) > ::SafeArrayDestroy(arrPtr); However, the array isn't locked. Thus, SafeArrayUnlock fails. SafeArrayDestroy isn't called.
Attachments
Patch (1.97 KB, patch)
2022-01-04 22:52 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2022-01-04 22:42:50 PST
r23321 added the code.
Fujii Hironori
Comment 2 2022-01-04 22:52:20 PST
EWS
Comment 3 2022-01-05 00:03:55 PST
Committed r287605 (245732@main): <https://commits.webkit.org/245732@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 448360 [details].
Radar WebKit Bug Importer
Comment 4 2022-01-05 00:04:31 PST
Note You need to log in before you can comment on or make changes to this bug.