[Win][DumpRenderTree] dumpHistoryItem leaks a SafeArray https://bugs.webkit.org/show_bug.cgi?id=234870

Reviewed by Darin Adler.

r23462 added the following code.
> if (arrPtr && SUCCEEDED(::SafeArrayUnlock(arrPtr)))
>     ::SafeArrayDestroy(arrPtr);
However, the array wasn't locked. SafeArrayUnlock always failed.
Thus, SafeArrayDestroy wasn't called.

* DumpRenderTree/win/DumpRenderTree.cpp:
(dumpHistoryItem): Don't use SafeArrayUnlock. Fixed a typo 'arrary'.



Canonical link: https://commits.webkit.org/245732@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287605 268f45cc-cd09-0410-ab3c-d52691b4dbfc